[gd_scene load_steps=20 format=2]

[ext_resource path="res://MecanismoMoleculas/sprites-elements/C.png" type="Texture" id=1]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/O.png" type="Texture" id=2]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/N.png" type="Texture" id=3]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/H.png" type="Texture" id=4]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/Br.png" type="Texture" id=5]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/Cl.png" type="Texture" id=6]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lig-dupla.png" type="Texture" id=7]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lig-simples.png" type="Texture" id=8]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lig-tripla.png" type="Texture" id=9]
[ext_resource path="res://MecanismoMoleculas/Atm.gd" type="Script" id=10]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/OPress.png" type="Texture" id=11]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lig-simplesPress.png" type="Texture" id=12]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/NPress.png" type="Texture" id=13]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lig-duplaPress.png" type="Texture" id=14]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/lug-triplaPress.png" type="Texture" id=15]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/HPress.png" type="Texture" id=16]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/ClPress.png" type="Texture" id=17]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/BrPress.png" type="Texture" id=18]
[ext_resource path="res://MecanismoMoleculas/sprites-elements/CPress.png" type="Texture" id=19]

[node name="Atm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 57.0
margin_bottom = 56.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 3

[node name="C" type="CenterContainer" parent="GridContainer"]
margin_right = 16.0
margin_bottom = 16.0

[node name="C" type="TextureButton" parent="GridContainer/C"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 19 )

[node name="H" type="CenterContainer" parent="GridContainer"]
margin_left = 17.0
margin_right = 33.0
margin_bottom = 16.0

[node name="H" type="TextureButton" parent="GridContainer/H"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )

[node name="O" type="CenterContainer" parent="GridContainer"]
margin_left = 34.0
margin_right = 50.0
margin_bottom = 16.0

[node name="O" type="TextureButton" parent="GridContainer/O"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )

[node name="N" type="CenterContainer" parent="GridContainer"]
margin_top = 17.0
margin_right = 16.0
margin_bottom = 33.0

[node name="N" type="TextureButton" parent="GridContainer/N"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )

[node name="Cl" type="CenterContainer" parent="GridContainer"]
margin_left = 17.0
margin_top = 17.0
margin_right = 33.0
margin_bottom = 33.0

[node name="Cl" type="TextureButton" parent="GridContainer/Cl"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )

[node name="Br" type="CenterContainer" parent="GridContainer"]
margin_left = 34.0
margin_top = 17.0
margin_right = 50.0
margin_bottom = 33.0

[node name="Br" type="TextureButton" parent="GridContainer/Br"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )

[node name="LigSimp" type="CenterContainer" parent="GridContainer"]
margin_top = 34.0
margin_right = 16.0
margin_bottom = 50.0

[node name="LigSimp" type="TextureButton" parent="GridContainer/LigSimp"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )

[node name="LigDupl" type="CenterContainer" parent="GridContainer"]
margin_left = 17.0
margin_top = 34.0
margin_right = 33.0
margin_bottom = 50.0

[node name="LigDupl" type="TextureButton" parent="GridContainer/LigDupl"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )

[node name="LigTrip" type="CenterContainer" parent="GridContainer"]
margin_left = 34.0
margin_top = 34.0
margin_right = 50.0
margin_bottom = 50.0

[node name="LigTrip" type="TextureButton" parent="GridContainer/LigTrip"]
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )

[connection signal="pressed" from="GridContainer/C/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="GridContainer/H/H" to="." method="_on_H_pressed"]
[connection signal="pressed" from="GridContainer/O/O" to="." method="_on_O_pressed"]
[connection signal="pressed" from="GridContainer/N/N" to="." method="_on_N_pressed"]
[connection signal="pressed" from="GridContainer/Cl/Cl" to="." method="_on_Cl_pressed"]
[connection signal="pressed" from="GridContainer/Br/Br" to="." method="_on_Br_pressed"]
[connection signal="pressed" from="GridContainer/LigSimp/LigSimp" to="." method="_on_LigSimp_pressed"]
[connection signal="pressed" from="GridContainer/LigDupl/LigDupl" to="." method="_on_LigDupl_pressed"]
[connection signal="pressed" from="GridContainer/LigTrip/LigTrip" to="." method="_on_LigTrip_pressed"]
